--- a/style.css
+++ b/style.css
@@ -23,23 +23,6 @@ header h1 {
     margin-bottom: 10px;
 }
 
-/* Navigation menu styles */
-nav {
-    background-color: #444;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-}
-
-nav ul {
-    list-style: none;
-}
-
-nav li {
-    display: inline;
-    margin-right: 20px;
-}
-
 /* Main content container */
 .container {
     max-width: 960px;
@@ -69,7 +52,36 @@ nav li {
     margin-bottom: 20px;
 }
 
-/* Registration button */
+/* Form styles */
+form {
+    margin-top: 20px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+form label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+form input[type="text"],
+form input[type="email"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+/* Checkbox styles */
+form input[type="checkbox"] {
+    margin-right: 5px;
+}
+
+/* Register button styles */
 .register-button {
     display: inline-block;
     background-color: #007bff;
